manifests/ocr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr
  namespace: cloudlab
  labels:
    app: ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr
  template:
    metadata:
      labels:
        app: ocr
    spec:
      containers:
        - name: ocr
          image: ghcr.io/harkaibalazs/ocr:latest
          volumeMounts:
            - name: easyocr-models
              mountPath: /root/.EasyOCR
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi
      volumes:
        - name: easyocr-models
          persistentVolumeClaim:
            claimName: ocr-models
