manifests/ocr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr
  labels:
    app: ocr
spec:
  selector:
    app: ocr
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
