manifests/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cloudlab
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
